--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
 
+<head>
+
+  <title>kartridj</title>
+  
+</head>
+<body>
+
+  <h1>hey guys welcome back to my lets play video</h1>
+  <h2>dont forget to like and subscribe and hit that notification bell</h2>
+
+</body>
