--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
 
-  <h1>hey guys welcome back to my lets play video</h1>
-  <h2>dont forget to like and subscribe and hit that notification bell</h2>
+  <h1>the bugs are in my skin</h1>
+  <h2>the bugs are in my skin</h2>
+  <h3>the bugs are in my skin</h3>
+  <h4>the bugs are in my skin</h4>
+  <h5>the bugs are in my skin</h5>
+  <h6>the bugs are in my skin</h6>
 
 </body>
