--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
   <h4>the bugs are in my skin</h4>
   <h5>the bugs are in my skin</h5>
   <h6>the bugs are in my skin</h6>
+  <h5>the bugs are in my skin</h5>
+  <h4>the bugs are in my skin</h4>
+  <h3>the bugs are in my skin</h3>
+  <h2>the bugs are in my skin</h2>
+  <h1>the bugs are in my skin</h1>
 
 </body>
